--- a/1-HTML/notes.html
+++ b/1-HTML/notes.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <h1>My HTML notes dad</h1>
+        <h1>My HTML notes</h1>
         <em>Hi there!</em><br><br>
         Markup are instructions at html in how to format <br>
         the text, they come in <strong>tag pairs</strong>.<br>
