--- a/2-Animal_card_project/card.html
+++ b/2-Animal_card_project/card.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Animal Trading Cards</title>
-	<link rel="stylesheet" href="styles.css" type="text/css">
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body class="body_frame">
 	<div class="div_outer_frame">
