--- a/2-Animal_card_project/card.html
+++ b/2-Animal_card_project/card.html
@@ -10,7 +10,7 @@
 		<!-- your favorite animal's name goes here -->
 		<h3 class="header">German Shepherd dog</h3>
 		<!-- your favorite animal's image goes here -->
-		<img src="german-shepherd-dog.jpg" alt="german-shepherd-dog" width="300" height="200">
+		<img class="image_class" src="german-shepherd-dog.jpg" alt="german-shepherd-dog">
 		<div class="div_frame">
 			<!-- your favorite animal's interesting fact goes here -->
 			<p class="animal_introduction">The German Shepherd, also known in Britain as an Alsatian, 
